# OpenGL_sample

OpenGL_First_Step/: CMakeLists.txt  main.cpp
poligon_texture/: CMakeLists.txt  main.cpp
